force-app/main/default/objects/Contact2__c/Contact2__c.object-meta.xml
<CustomObject>
    <label>Contact2</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>