force-app/main/default/objects/Contact2__c/fields/Account2__c.field-meta.xml
<CustomField>
    <fullName>Account2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account2</label>
    <referenceTo>Account2__c</referenceTo>
    <relationshipLabel>Contact2</relationshipLabel>
    <relationshipName>Contact2</relationshipName>
    <type>Lookup</type>
</CustomField>