force-app/main/default/objects/Contact2__c/validationRules/Check_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>StartDate__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>StartDate cannot be less than today</errorMessage>
</ValidationRule>